--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         
         <div class="portfolio__item" data-name="on-github-btn">
           <a href="news-app.html">
-            <img src="images/news-app.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
+            <img src="images/news-app.png" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">News Application</h2>
             <div class="portfolio__item__hover">
               <h2 class="portfolio__item__hover__title">Mobile App<span
