--- a/news-app.html
+++ b/news-app.html
@@ -22,6 +22,7 @@
 
   <link rel="stylesheet" media="screen and (max-width: 1024px)" href="css/project_media_small.css" />
   <!-- project mobile stylesheet -->
+
   <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 1024px) and (orientation: landscape)"
     href="css/project_media_small_landscape.css" /><!-- project mobile stylesheet -->
 
@@ -82,9 +83,9 @@
       <h2 class="project__title project__title--white">News Application<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">Application to search news</h3>
-      <img src="images/news-app_1400.jpg" srcset="images/news-app_800.jpg 800w,
-                  images/news-app_1200.jpg 1200w,
-                  images/news-app_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
+      <img src="images/news-app_1400.png" srcset="images/news-app_800.png 800w,
+                  images/news-app_1200.png 1200w,
+                  images/news-app_1400.png 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
