--- a/news-app.html
+++ b/news-app.html
@@ -83,9 +83,9 @@
       <h2 class="project__title project__title--white">News Application<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">Application to search news</h3>
-      <img src="images/news-app_1400.png" srcset="images/news-app_800.png 800w,
-                  images/news-app_1200.png 1200w,
-                  images/news-app_1400.png 1400w" sizes="(max-width: 320px) 90vw,
+      <img src="images/news-app-1400.png" srcset="images/news-app-800.png 800w,
+                  images/news-app-1200.png 1200w,
+                  images/news-app-1400.png 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
