--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <p class="portfolio__item__hover__description">Collection of image gallery hover effects.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="website">
           <a href="vue-career-page.html">
             <img src="images/career.jpg" class="portfolio__item__thumbnail" alt="career page">
@@ -172,7 +172,7 @@
               <p class="portfolio__item__hover__description">Career page made with Vue.js and Firebase.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="app">
           <a href="fun-facts-app.html">
             <img src="images/fun_facts.jpg" class="portfolio__item__thumbnail" alt="fun facts">
@@ -183,7 +183,7 @@
               <p class="portfolio__item__hover__description">Little app to display coding related facts.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="app">
           <a href="character-limiter-app.html">
             <img src="images/character_limiter.jpg" class="portfolio__item__thumbnail" alt="character limiter app">
@@ -195,7 +195,7 @@
                 Vanilla JS.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="website">
           <a href="livet-website-template.html">
             <img src="images/livet2.jpg" class="portfolio__item__thumbnail" alt="livet template webtite">
@@ -217,7 +217,7 @@
               <p class="portfolio__item__hover__description">App to increase study and work productivity.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="app">
           <a href="calculator-js-app.html">
             <img src="images/calculator.jpg" class="portfolio__item__thumbnail" alt="calculator js app">
@@ -228,7 +228,7 @@
               <p class="portfolio__item__hover__description">Basic calculator for simple arithmetic operations.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="illustration">
           <a href="camera-css-illustration.html">
             <img src="images/camera.jpg" class="portfolio__item__thumbnail" alt="camera CSS illustration">
@@ -239,7 +239,7 @@
               <p class="portfolio__item__hover__description">Illustration made with pure CSS.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="app">
           <a href="random-quote-machine-app.html">
             <img src="images/quote.jpg" class="portfolio__item__thumbnail" alt="random quote machine app">
@@ -250,7 +250,7 @@
               <p class="portfolio__item__hover__description">App to display random inspirational quotes.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div>END portfolio__item 
         <div class="portfolio__item" data-name="app">
           <a href="wikipedia-viewer-app.html">
             <img src="images/wiki.jpg" class="portfolio__item__thumbnail" alt="wikipedia viewer app">
@@ -261,7 +261,7 @@
               <p class="portfolio__item__hover__description">App to find and preview entries from Wikipedia.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item 
+        </div> END portfolio__item 
         <div class="portfolio__item" data-name="illustration">
           <a href="owl-css-illustration.html">
             <img src="images/owl.jpg" class="portfolio__item__thumbnail" alt="owl CSS illustration">
@@ -272,9 +272,9 @@
               <p class="portfolio__item__hover__description">Illustration made with pure CSS.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item
+        </div> END portfolio__item
       </div>
-    </section>
+    </section> -->
     <!-- Contact -->
     <section id="contact" class="contact">
       <div class="contact__envelope">
