--- a/about-me.html
+++ b/about-me.html
@@ -92,7 +92,7 @@
                     <p class="about-me__skills__text">I'm up to building fully <span class="about-me__skills__text--accent">responsive</span> mobile applications using <span class="about-me__skills__text--accent">DART</span> </p>
                 </div>
                 <!-- second skills item -->
-                <div class="about-me__skills__item">
+                <!-- <div class="about-me__skills__item">
                     <div class="about-me__skills__header">
                         <img class="about-me__skills__logo" src="images/flutter-logo.png" alt="flutter logo">
                     </div>
@@ -103,7 +103,7 @@
                         in Mobile Development. I enjoy using it to <span class="about-me__skills__text--accent">beautify</span> my
                         projects and play with it creating <span class="about-me__skills__text--accent">Flutter illustrations.</span>
                     </p>
-                </div>
+                </div> -->
                 <!-- sixth skills item -->
                 <div class="about-me__skills__item">
                     <div class="about-me__skills__header">
@@ -137,7 +137,7 @@
                     <p class="about-me__skills__text">Flutter <span class="about-me__skills__text--accent">solid</span> is an open-source UI software development kit created by Google.<span class="about-me__skills__text--accent"> It is used to develop cross platform applications</span> for Android, iOS, Linux, macOS, Windows, Google Fuchsia, and the web from a single codebase. <span class="about-me__skills__text--accent"></span> First described in 2015, Flutter was released <span class="about-me__skills__text--accent">in May 2022</span> .</p>
                 </div>
                 <!-- sixth skills item -->
-                <div class="about-me__skills__item">
+                <!-- <div class="about-me__skills__item">
                     <div class="about-me__skills__header">
                         <img class="about-me__skills__logo" src="images/git-icon.svg" alt="Git icon">
                     </div>
@@ -145,7 +145,7 @@
                         <h1 class="about-me__skills__middle__name">Git</h1>
                     </div>
                     <p class="about-me__skills__text">Git is free and <span class="about-me__skills__text--accent">open source </span> software for distributed version control: <span class="about-me__skills__text--accent"></span> tracking changes in any set of files, usually used for coordinating work among programmers collaboratively developing source code during software development.<span class="about-me__skills__text--accent"></span></p>
-                </div>
+                </div> -->
                 <!-- forth skills item -->
                 <div class="about-me__skills__item">
                     <div class="about-me__skills__header">
@@ -243,7 +243,7 @@
                         <h4 class="about-me__biography__description">...a few words about</h4>
                     </div>
                     <p class="about-me__biography__text"><span class="about-me__first-letter">I</span> enjoy the process of
-                        building the web products from scratch. Solving problems and finding the best solutions is a creative
+                        building the mobile app products from scratch. Solving problems and finding the best solutions is a creative
                         process which often pushes us leaving our comfort zone and this is when we are growing, aren't we?</p>
                     <p class="about-me__biography__text">I chose Mobile Development because apps is a lot more flexible, which allows developers more space to experiment and innovate. Choosing a mobile application development platform for Android & IOS encourages new ideas, and is instrumental in creating applications that add previously unmatched value into users’ lives.</p>
                     <p class="about-me__biography__text">All my projects are fully responsive.</p>
@@ -294,7 +294,7 @@
                     <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
                     <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
                     <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-                    <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> --> -->
+                    <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
                     <a href="#" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
                 </div>
             </div>
