--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
-      <!--  <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> --> -->
-      <!--  <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> --> -->
-      <!--  <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> --> --> -->
+      <!--  <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+      <!--  <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> --> 
+      <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
       <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
       <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
@@ -275,9 +275,10 @@
         </div> END portfolio__item
       </div>
     </section> -->
-    <!-- Contact -->
+    <!-- Contact contact__envelope-->
+    
     <section id="contact" class="contact">
-      <div class="contact__envelope">
+      <div class="footer__info__container">
         <h1 class="contact__title title--white">Get in touch<span class="contact__title__dot title__dot--white"></span>
         </h1>
         <h2 class="contact__description">You can reach me via email or find me on social networks.<br> I would love to
