--- a/index.html
+++ b/index.html
@@ -275,10 +275,9 @@
         </div> END portfolio__item
       </div>
     </section> -->
-    <!-- Contact contact__envelope-->
-    
+    <!-- Contact -->
     <section id="contact" class="contact">
-      <div class="footer__info__container">
+      <div class="contact__envelope">
         <h1 class="contact__title title--white">Get in touch<span class="contact__title__dot title__dot--white"></span>
         </h1>
         <h2 class="contact__description">You can reach me via email or find me on social networks.<br> I would love to
@@ -331,7 +330,7 @@
         <!-- footer social buttons -->
         <div class="footer__social-btn">
 		<!--
-          <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+           <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
           <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
 		   <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
 		   
