--- a/index.html
+++ b/index.html
@@ -273,9 +273,10 @@
               <p class="portfolio__item__hover__description">Illustration made with pure CSS.</p>
             </div>
           </a>
-        </div> END portfolio__item
-      </div>
-    </section> -->
+        </div> 
+        <!-- END portfolio__item -->
+      <!-- /div>
+    </section> --> 
     <!-- Contact -->
     <section id="contact" class="contact">
       <div class="contact__envelope">
