--- a/index.html
+++ b/index.html
@@ -298,10 +298,33 @@
       </div>
     </section>
     <!-- Footer -->
-    <footer class="footer">
+    <!-- Footer -->
+        <footer class="footer">
+            <div class="footer__info__container">
+                <h2 class="footer__copyright">&copy; Indrat Saputra 2022</h2>
+                <!-- footer navigation -->
+                <ul class="footer-menu__list">
+                    <li class="footer-menu__list-item">
+                        <a href="index.html#about" class="footer-menu__link">About</a>
+                    </li>
+                    <li class="footer-menu__list-item">
+                        <a href="index.html#portfolio" class="footer-menu__link">Portfolio</a>
+                    </li>
+                    <li class="footer-menu__list-item">
+                        <a href="index.html#contact" class="footer-menu__link">Contact</a>
+                    </li>
+                </ul>
+                <!-- footer social buttons -->
+                <div class="footer__social-btn">
+                    <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+                    <a href="#" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
+                </div>
+            </div>
+        </footer>
+    <!-- footer class="footer">
       <div class="footer__info__container">
         <h2 class="footer__copyright">&copy; Indrat Saputra 2022</h2>
-        <!-- footer navigation -->
+         footer navigation 
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
             <a href="#about" class="footer-menu__link">About</a>
@@ -313,14 +336,14 @@
             <a href="#contact" class="footer-menu__link">Contact</a>
           </li>
         </ul>
-        <!-- footer social buttons -->
+         footer social buttons
         <div class="footer__social-btn">
           <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
           <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
               class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script><!-- jQuery -->
