--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </a>
         </div><!-- END portfolio__item -->
         
-        <div class="portfolio__item" data-name="on-github-btn">
+        <!-- <div class="portfolio__item" data-name="on-github-btn">
           <a href="news-app.html">
             <img src="images/news-app.png" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">News Application</h2>
@@ -150,7 +150,8 @@
               <p class="portfolio__item__hover__description">News Application</p>
             </div>
           </a>
-        </div><!-- END portfolio__item -->
+        </div> -->
+        <!-- END portfolio__item -->
         <!--
         <div class="portfolio__item" data-name="website">
           <a href="image-hover-effects.html">
@@ -274,7 +275,7 @@
             </div>
           </a>
         </div> 
-        <!-- END portfolio__item -->
+        END portfolio__item -->
       <!-- /div>
     </section> --> 
     <!-- Contact -->
