--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
           </a>
         </div> 
         END portfolio__item -->
-      <!-- /div>
-    </section> --> 
+      <!-- /div> -->
+    </section> 
     <!-- Contact -->
     <section id="contact" class="contact">
       <div class="contact__envelope">
