--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <img src="images/indrat_large.png" srcset="images/indrat_small.png 800w,
                         images/indrat_medium.png 1100w,
                         images/indrat_large.png 1400w" sizes="100vw" class="about__img__mobile" alt="autor portrait" />
-          <p class="about__text__description">Hello, my name is Indrat. I am a Mobile Developer located in Indonesia.</p>
+          <p class="about__text__description">Hello, my name is Indrat Saputra. I am a Mobile Developer located in Indonesia.</p>
           <p class="about__text__description">I develop mobile application using Dart & Flutter. When dealing with a project I pay attention to the smallest details addressing problems with
             patience. Mobile development help me to free my creative mind and allow me satisfy my desire towards
             constant self growth.</p>
