--- a/index.html
+++ b/index.html
@@ -152,6 +152,20 @@
           </a>
         </div>
         <!-- END portfolio__item -->
+
+        <div class="portfolio__items-container">
+        <div class="portfolio__item" data-name="on-github-btn">
+          <a href="bmi-calculator.html">
+            <img src="images/bmi-1.png" class="portfolio__item__thumbnail" alt="image hover effects">
+            <h2 class="portfolio__item__info">BMI Calculator</h2>
+            <div class="portfolio__item__hover">
+              <h2 class="portfolio__item__hover__title">Mobile App<span
+                  class="portfolio__title__dot title__dot--white"></span>
+              </h2>
+              <p class="portfolio__item__hover__description">The Body Mass Index (BMI) Calculator can be used to calculate BMI value and corresponding weight status while taking age into consideration. </p>
+            </div>
+          </a>
+        </div><!-- END portfolio__item -->
         <!--
         <div class="portfolio__item" data-name="website">
           <a href="image-hover-effects.html">
