--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -82,9 +82,9 @@
       <h2 class="project__title project__title--white">BMI Calculator<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">The Body Mass Index (BMI) Calculator can be used to calculate BMI value and corresponding weight status while taking age into consideration.</h3>
-      <img src="images/bmi-1.png" srcset="images/bmi-1.png 800w,
-                  images/bmi-1.png 1200w,
-                  images/bmi-1.png 1400w" sizes="(max-width: 320px) 90vw,
+      <img src="images/bmi.png" srcset="images/bmi-800.png 800w,
+                  images/bmi-1200.png 1200w,
+                  images/bmi-1400.png 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
