--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="portfolio__items-container">
         <div class="portfolio__item" data-name="on-github-btn">
           <a href="bmi-calculator.html">
-            <img src="images/bmi-1.png" class="portfolio__item__thumbnail" alt="image hover effects">
+            <img src="images/bmi.png" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">BMI Calculator</h2>
             <div class="portfolio__item__hover">
               <h2 class="portfolio__item__hover__title">Mobile App<span
