--- a/index.html
+++ b/index.html
@@ -166,6 +166,20 @@
             </div>
           </a>
         </div><!-- END portfolio__item -->
+
+        <div class="portfolio__item" data-name="on-github-btn">
+          <a href="flutter-notes.html">
+            <img src="images/flutter-note-800.png" class="portfolio__item__thumbnail" alt="image hover effects">
+            <h2 class="portfolio__item__info">Flutter Notes</h2>
+            <div class="portfolio__item__hover">
+              <h2 class="portfolio__item__hover__title">Mobile App<span
+                  class="portfolio__title__dot title__dot--white"></span>
+              </h2>
+              <p class="portfolio__item__hover__description">Notes Application</p>
+            </div>
+          </a>
+        </div>
+        <!-- END portfolio__item -->
         <!--
         <div class="portfolio__item" data-name="website">
           <a href="image-hover-effects.html">
