--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
       <h3 class="portfolio__description">Examples of my latest projects build with Dart & Flutter.</h3>
       <div class="portfolio__nav__container">
         <button class="portfolio__nav__btn" data-btn-name="all-btn">All</button>
-        <button class="portfolio__nav__btn" data-btn-name="on-google-play-btn">on Google Play</button>
-        <button class="portfolio__nav__btn" data-btn-name="on-github-btn">on Github</button>
+        <button class="portfolio__nav__btn" data-btn-name="ongoogleplay-btn">on Google Play</button>
+        <button class="portfolio__nav__btn" data-btn-name="ongithub-btn">on Github</button>
         <!-- <button class="portfolio__nav__btn" data-btn-name="apps-btn">Web Apps</button> -->
       </div>
       <!-- mulai portofolio aplikasi -->
       <div class="portfolio__items-container">
-        <div class="portfolio__item" data-name="on-google-play-btn">
+        <div class="portfolio__item" data-name="ongoogleplay">
           <a href="kita-muslim.html">
             <img src="images/kita-muslim.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">Kita Muslim</h2>
@@ -139,7 +139,7 @@
           </a>
         </div><!-- END portfolio__item -->
         
-        <div class="portfolio__item" data-name="on-github-btn">
+        <div class="portfolio__item" data-name="ongithub">
           <a href="news-app.html">
             <img src="images/news-app.png" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">News Application</h2>
@@ -154,7 +154,7 @@
         <!-- END portfolio__item -->
 
         <div class="portfolio__items-container">
-        <div class="portfolio__item" data-name="on-github-btn">
+        <div class="portfolio__item" data-name="ongithub">
           <a href="bmi-calculator.html">
             <img src="images/bmi.png" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">BMI Calculator</h2>
@@ -167,7 +167,7 @@
           </a>
         </div><!-- END portfolio__item -->
 
-        <div class="portfolio__item" data-name="on-github-btn">
+        <div class="portfolio__item" data-name="ongithub">
           <a href="flutter-notes.html">
             <img src="images/flutter-note-800.png" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">Flutter Notes</h2>
