update kitamuslim to in review

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
       </div>
       <!-- mulai portofolio aplikasi -->
       <div class="portfolio__items-container">
-        <div class="portfolio__item" data-name="ongoogleplay">
+        <!-- <div class="portfolio__item" data-name="ongoogleplay"> -->
+          <div class="portfolio__item" data-name="ongithub">
           <a href="kita-muslim.html">
             <img src="images/kita-muslim.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">Kita Muslim</h2>
@@ -134,7 +135,7 @@
               <h2 class="portfolio__item__hover__title">Mobile App<span
                   class="portfolio__title__dot title__dot--white"></span>
               </h2>
-              <p class="portfolio__item__hover__description">Al-Quran application with dart & flutter</p>
+              <p class="portfolio__item__hover__description">Al-Quran application with dart & flutter (in review GooglePlay)</p>
             </div>
           </a>
         </div><!-- END portfolio__item -->
