--- a/kita-muslim.html
+++ b/kita-muslim.html
@@ -89,7 +89,7 @@
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
         <!-- <a href="https://just-a-pair.web.app/" target="_blank" class="project__header__btn">Live Demo</a> -->
-        <a href="https://github.com/indratdev/just-a-pair" target="_blank" class="project__header__btn">GitHub</a>
+        <a href="https://play.google.com/store/apps/details?id=com.indratdev.kitamuslim" target="_blank" class="project__header__btn">Google Play</a>
       </div>
     </header>
     <!-- Main -->
