--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
       </div>
       <!-- mulai portofolio aplikasi -->
       <div class="portfolio__items-container">
-        <!-- <div class="portfolio__item" data-name="ongoogleplay"> -->
-          <div class="portfolio__item" data-name="ongithub">
+        <div class="portfolio__item" data-name="ongoogleplay">
+          <!-- <div class="portfolio__item" data-name="ongithub"> -->
           <a href="kita-muslim.html">
             <img src="images/kita-muslim.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">Kita Muslim</h2>
