--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <h2 class="portfolio__item__hover__title">Mobile App<span
                   class="portfolio__title__dot title__dot--white"></span>
               </h2>
-              <p class="portfolio__item__hover__description">Al-Quran application with dart & flutter (in review GooglePlay)</p>
+              <p class="portfolio__item__hover__description">Al-Quran application with dart & flutter (on GooglePlay)</p>
             </div>
           </a>
         </div><!-- END portfolio__item -->
