add index value money app

--- a/index.html
+++ b/index.html
@@ -138,7 +138,24 @@
               <p class="portfolio__item__hover__description">Al-Quran application with dart & flutter (on GooglePlay)</p>
             </div>
           </a>
-        </div><!-- END portfolio__item -->
+        </div>
+		
+		<!-- 2 		-->
+		<div class="portfolio__item" data-name="ongoogleplay">
+          <a href="money-app.html">
+            <img src="images/money-app.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
+            <h2 class="portfolio__item__info">Money App</h2>
+            <div class="portfolio__item__hover">
+              <h2 class="portfolio__item__hover__title">Mobile App<span
+                  class="portfolio__title__dot title__dot--white"></span>
+              </h2>
+              <p class="portfolio__item__hover__description">Money App with dart & flutter (on GooglePlay)</p>
+            </div>
+          </a>
+        </div>
+		<!-- End 2 	-->
+		
+		<!-- END portfolio__item -->
         
         <div class="portfolio__item" data-name="ongithub">
           <a href="news-app.html">
@@ -331,7 +348,7 @@
     <!-- Footer -->
         <footer class="footer">
             <div class="footer__info__container">
-                <h2 class="footer__copyright">&copy; Indrat Saputra 2022</h2>
+                <h2 class="footer__copyright">&copy; Indrat Saputra 2023</h2>
                 <!-- footer navigation -->
                 <ul class="footer-menu__list">
                     <li class="footer-menu__list-item">
