--- a/index.html
+++ b/index.html
@@ -120,11 +120,12 @@
       <h3 class="portfolio__description">Examples of my latest projects build with Dart & Flutter.</h3>
       <div class="portfolio__nav__container">
         <button class="portfolio__nav__btn" data-btn-name="all-btn">All</button>
-        <button class="portfolio__nav__btn" data-btn-name="ongoogleplay-btn">on Google Play</button>
-        <button class="portfolio__nav__btn" data-btn-name="ongithub-btn">on Github</button>
+        <button class="portfolio__nav__btn" data-btn-name="ongoogleplay-btn">On Google Play</button>
+        <button class="portfolio__nav__btn" data-btn-name="slicingui-btn">Slicing UI</button>
+        <button class="portfolio__nav__btn" data-btn-name="ongithub-btn">On Github</button>
         <!-- <button class="portfolio__nav__btn" data-btn-name="apps-btn">Web Apps</button> -->
       </div>
-      <!-- mulai portofolio aplikasi -->
+      <!-- mulai portofolio aplikasi (on google play) -->
       <div class="portfolio__items-container">
         <div class="portfolio__item" data-name="ongoogleplay">
           <!-- <div class="portfolio__item" data-name="ongithub"> -->
@@ -141,7 +142,7 @@
         </div>
 		
 		<!-- 2 		-->
-		<div class="portfolio__item" data-name="ongoogleplay">
+		<!-- <div class="portfolio__item" data-name="ongoogleplay">
           <a href="money-app.html">
             <img src="images/money-app.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">Money App</h2>
@@ -152,11 +153,29 @@
               <p class="portfolio__item__hover__description">Money App with dart & flutter (on GooglePlay)</p>
             </div>
           </a>
-        </div>
+        </div> -->
 		<!-- End 2 	-->
+
+    <!-- mulai portofolio aplikasi (slicing ui) -->
+    <div class="portfolio__items-container">
+      <div class="portfolio__item" data-name="slicingui">      
+        <a href="views/mytelkomsel.html">
+          <img src="images/slicingui/mytelkomsel/banner_1.png" class="portfolio__item__thumbnail" alt="image hover effects">
+          <h2 class="portfolio__item__info">MyTelkomsel</h2>
+          <div class="portfolio__item__hover">
+            <h2 class="portfolio__item__hover__title">Mobile App<span
+                class="portfolio__title__dot title__dot--white"></span>
+            </h2>
+            <p class="portfolio__item__hover__description">Slicing UI MyTelkomsel</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+
 		
 		<!-- END portfolio__item -->
-        
+        <!-- MULAI ON GITHUB -->
         <div class="portfolio__item" data-name="ongithub">
           <a href="news-app.html">
             <img src="images/news-app.png" class="portfolio__item__thumbnail" alt="image hover effects">
