--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!-- mulai portofolio aplikasi (slicing ui) -->
     <div class="portfolio__items-container">
       <div class="portfolio__item" data-name="slicingui">      
-        <a href="views/mytelkomsel.html">
+        <a href="viewsUI/mytelkomsel.html">
           <img src="images/slicingui/mytelkomsel/banner_1.png" class="portfolio__item__thumbnail" alt="image hover effects">
           <h2 class="portfolio__item__info">MyTelkomsel</h2>
           <div class="portfolio__item__hover">
