--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -82,9 +82,9 @@
       <h2 class="project__title project__title--white">MyTelkomsel<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">Slicing UI Application MyTelkomsel</h3>
-      <img src="images/slicingui/mytelkomsel/banner_1_1400.jpg" srcset="images/slicingui/mytelkomsel/banner_1_800.jpg 800w,
-                  images/slicingui/mytelkomsel/banner_1_1200.jpg 1200w,
-                  images/slicingui/mytelkomsel/banner_1_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
+      <img src="images/slicingui/mytelkomsel/banner_1_1400.png" srcset="images/slicingui/mytelkomsel/banner_1_800.png 800w,
+                  images/slicingui/mytelkomsel/banner_1_1200.png 1200w,
+                  images/slicingui/mytelkomsel/banner_1_1400.png 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
