--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -77,66 +77,42 @@
     </div>
   </div>
   <div class="project__container">
-    <!-- Header -->
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <!-- <img src="img1.jpg" alt="Image 1"> -->
-      <img src="images/slicingui/mytelkomsel/banner_1_1400.png" srcset="images/slicingui/mytelkomsel/banner_1_800.png 800w,
-                  images/slicingui/mytelkomsel/banner_1_1200.png 1200w,
-                  images/slicingui/mytelkomsel/banner_1_1400.png 1400w" sizes="(max-width: 320px) 90vw,
-                 (max-width: 700px) 90vw,
-                 (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
-      <div class="carousel-caption">
-        <h3>Slide 1</h3>
-        <p>Description of slide 1.</p>
+   <header class="project__header">
+    <div class="slider">
+      <div>
+        <img src="images/slicingui/mytelkomsel/banner_1_1400.png" srcset="images/slicingui/mytelkomsel/banner_1_800.png 800w,
+        images/slicingui/mytelkomsel/banner_1_1200.png 1200w,
+        images/slicingui/mytelkomsel/banner_1_1400.png 1400w" sizes="(max-width: 320px) 90vw,
+       (max-width: 700px) 90vw,
+       (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       </div>
+
+      <div>
+        <img src="images/slicingui/mytelkomsel/banner_2_1400.png" srcset="images/slicingui/mytelkomsel/banner_2_800.png 800w,
+        images/slicingui/mytelkomsel/banner_2_1200.png 1200w,
+        images/slicingui/mytelkomsel/banner_2_1400.png 1400w" sizes="(max-width: 320px) 90vw,
+       (max-width: 700px) 90vw,
+       (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
+      </div>
+      
     </div>
 
-    <div class="item">
-      <!-- <img src="img2.jpg" alt="Image 2"> -->
-      <img src="images/slicingui/mytelkomsel/banner_2_1400.png" srcset="images/slicingui/mytelkomsel/banner_2_800.png 800w,
-                  images/slicingui/mytelkomsel/banner_2_1200.png 1200w,
-                  images/slicingui/mytelkomsel/banner_2_1400.png 1400w" sizes="(max-width: 320px) 90vw,
-                 (max-width: 700px) 90vw,
-                 (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
-      <div class="carousel-caption">
-        <h3>Slide 2</h3>
-        <p>Description of slide 2.</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="img3.jpg" alt="Image 3">
-      <div class="carousel-caption">
-        <h3>Slide 3</h3>
-        <p>Description of slide 3.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-	
-	
-    <!-- <header class="project__header">
-      <h2 class="project__title project__title--white">MyTelkomsel<span
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.slider').slick({
+          autoplay: true,
+          autoplaySpeed: 2000,
+          dots: true,
+          arrows: true,
+          prevArrow: '<button type="button" class="slick-prev">Previous</button>',
+          nextArrow: '<button type="button" class="slick-next">Next</button>'
+        });
+      });
+    </script>
+      
+    <!-- <h2 class="project__title project__title--white">MyTelkomsel<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">Slicing UI Application MyTelkomsel</h3>
       <img src="images/slicingui/mytelkomsel/banner_1_1400.png" srcset="images/slicingui/mytelkomsel/banner_1_800.png 800w,
