penambahan dan perubahan

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assets/images/profile2.jpg" alt="">
+        <img draggable="false" class="tilt" src="./assets/images/profile2.jpeg" alt="">
     </div>
     <div class="content">
-        <h3>I'm Jigar</h3>
-        <span class="tag">Full Stack Developer</span>
-        
+        <h3>I'm Indrat Saputra</h3>
+        <span class="tag">Mobile Developer</span>        
         <p>
           I'm a Mobile Developer specialized in building mobile application with a
                 big interest in pure Dart & Flutter.
@@ -138,16 +137,16 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="./assets/images/educat/college.jpeg" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h3>Bachelor of System Infomation in Information Technology</h3>
+        <p>Gunadarma University</p>
+        <h4>2010 - 2014</h4>
         </div>
     </div>
 
-    <div class="box">
+    <!-- <div class="box">
       <div class="image">
       <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
       </div>
@@ -156,7 +155,7 @@
       <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
       <h4>2018-2020 | Completed</h4>
       </div>
-    </div>
+    </div> -->
 
 </div>
 </section>
@@ -335,7 +334,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Indrat's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -351,16 +350,16 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <!-- <p> <i class="fas fa-phone"></i>+91 704-302-4736</p> -->
+          <p> <i class="fas fa-envelope"></i>indrat.dev@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Indonesia</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/indrat-saputra-40a08b190/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
               <a href="https://github.com/indratdev" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="mailto:indrat.dev@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <!-- <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a> -->
           </div>
       </div>
   </div>
