--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Indrat's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -77,16 +77,19 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <!-- <p> <i class="fas fa-phone"></i>+91 704-302-4736</p> -->
+          <p> <i class="fas fa-envelope"></i>indrat.dev@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Indonesia</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
+              <!-- <a href="https://www.linkedin.com/in/indrat-saputra-40a08b190/" class="fab fa-linkedin" target="_blank"></a>
               <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
               <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
               <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a> -->
+              <a href="https://www.linkedin.com/in/indrat-saputra-40a08b190/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://github.com/indratdev" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="mailto:indrat.dev@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
           </div>
       </div>
   </div>
