penambahan dan perubahan 3

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="content">
     <h2>Hi, <br/> I'm Indrat <span>Saputra</span></h2>
-    <p>i am into <span class="typing-text"></span></p>
+    <p>i'm  <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
     </a>
@@ -197,7 +197,7 @@
 <!-- work project section ends -->
 
 <!-- experience section starts -->
-<section class="experience" id="experience">
+<!-- <section class="experience" id="experience">
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
 
@@ -284,7 +284,7 @@
 
 </div>
 
-</section>
+</section> -->
 <!-- experience section ends -->
 
 <!-- contact section starts -->
