--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <img
             draggable="false"
             class="tilt"
-            src="./assets/images/profile2.jpeg"
+            src="./assets/images/profile2.jpg"
             alt=""
           />
         </div>
