--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,7 @@
         <button class="btn" data-filter=".lamp">LAMP Stack</button>
         <button class="btn" data-filter=".basicweb">Basic Web</button>
         <button class="btn" data-filter=".android">Android App</button>
+        <button class="btn" data-filter=".slicingui">Slicing UI</button>
       </div>
 
       <div class="box-container">
