--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -57,7 +57,7 @@
     <!-- navbar ends -->
 
     <!-- hero section starts -->
-    <section class="home" id="home">
+    <!-- <section class="home" id="home">
       <div id="particles-js"></div>
 
       <div class="content">
@@ -101,11 +101,11 @@
           alt=""
         />
       </div>
-    </section>
+    </section> -->
     <!-- hero section ends -->
 
     <!-- about section starts -->
-    <section class="about" id="about">
+    <!-- <section class="about" id="about">
       <h2 class="heading">
         <i class="fas fa-user-alt"></i> About <span>Me</span>
       </h2>
@@ -143,30 +143,30 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- about section ends -->
 
     <!-- skills section starts -->
-    <section class="skills" id="skills">
+    <!-- <section class="skills" id="skills">
       <h2 class="heading">
         <i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span>
-      </h2>
+      </h2> -->
 
-      <div class="container">
-        <div class="row" id="skillsContainer">
-          <!-- <div class="bar">
+    <!-- <div class="container">
+        <div class="row" id="skillsContainer"> -->
+    <!-- <div class="bar"> ga di pake
               <div class="info">
                 <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
                 <span>AdobeXD</span>
               </div>
             </div> -->
-        </div>
+    <!-- </div>
       </div>
-    </section>
+    </section> -->
     <!-- skills section ends -->
 
     <!-- education section starts -->
-    <section class="education" id="education">
+    <!-- <section class="education" id="education">
       <h1 class="heading">
         <i class="fas fa-graduation-cap"></i> My <span>Education</span>
       </h1>
@@ -191,28 +191,17 @@
             <h4>2010 - 2014</h4>
           </div>
         </div>
-
-        <!-- <div class="box">
-      <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
       </div>
-      <div class="content">
-      <h3>HSC Science | Informatic Practices</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
-      <h4>2018-2020 | Completed</h4>
-      </div>
-    </div> -->
-      </div>
-    </section>
+    </section> -->
     <!-- education section ends -->
 
     <!-- work project section starts -->
-    <section class="work" id="work">
+    <!-- <section class="work" id="work">
       <h2 class="heading">
         <i class="fas fa-laptop-code"></i> Projects <span>Made</span>
       </h2>
 
-      <div class="box-container">
+      <div class="box-container"> -->
         <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
@@ -230,13 +219,13 @@
     </div> -->
       </div>
 
-      <div class="viewall">
+      <!-- <div class="viewall">
         <a href="/projects" class="btn"
           ><span>View All</span>
           <i class="fas fa-arrow-right"></i>
         </a>
       </div>
-    </section>
+    </section> -->
     <!-- work project section ends -->
 
     <!-- experience section starts -->
@@ -331,7 +320,7 @@
     <!-- experience section ends -->
 
     <!-- contact section starts -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
       <h2 class="heading">
         <i class="fas fa-headset"></i> Get in <span>Touch</span>
       </h2>
@@ -372,7 +361,7 @@
           </form>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- contact section ends -->
 
     <!-- footer section starts -->
