--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -39,10 +39,10 @@
 
     <!-- navbar starts -->
     <header>
-      <a href="/" class="logo"><i class="fab fa-node-js"></i> Indrat</a>
+      <a href="/" class="logo"><i class="fab fa-node-js"></i> Indrat Saputra</a>
 
       <div id="menu" class="fas fa-bars"></div>
-      <nav class="navbar">
+      <!-- <nav class="navbar">
         <ul>
           <li><a class="active" href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -52,7 +52,7 @@
           <li><a href="#experience">Experience</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
     <!-- navbar ends -->
 
