--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -146,6 +146,51 @@
     </section> -->
     <!-- about section ends -->
 
+    <!-- content section -->
+    <section class="about" id="about">
+      <h2 class="heading">
+        <i class="fas fa-user-alt"></i> Slicing UI | <span>MyTelkomsel</span>
+      </h2>
+
+      <div class="row">
+        <div class="image">
+          <img
+            draggable="false"
+            class="tilt"
+            src="./assets/images/projects/mytelkomsel-banner.png"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <h3>MyTelkomsel</h3>
+          <span class="tag">Slicing UI</span>
+          <p>
+            MyTelkomsel is a mobile application published by Telkomsel.
+            MyTelkomsel Slicing UI uses the Flutter Framework which is 
+            a display that fits the application. In slicing UI, 
+            it is divided into sections for each module.
+          </p>
+
+          <div class="box-container">
+            <div class="box">
+              <p><span> email : </span> indrat.dev@gmail.com</p>
+              <p><span> place : </span> Indonesia</p>
+            </div>
+          </div>
+
+          <div class="resumebtn">
+            <a href="#" class="btn"
+              ><span>Resume</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- content section end -->
+
     <!-- skills section starts -->
     <!-- <section class="skills" id="skills">
       <h2 class="heading">
