--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -152,8 +152,8 @@
         <i class="fas fa-user-alt"></i> Slicing UI | <span>MyTelkomsel</span>
       </h2>
 
-      <div class="row">
-        <div class="image">
+      <!-- <div class="row"> -->
+        <!-- <div class="image">
           <img
             draggable="false"
             class="tilt"
@@ -170,19 +170,16 @@
             a display that fits the application. In slicing UI, 
             it is divided into sections for each module.
           </p>
-
-          <div class="box-container">
-            <div class="box">
-              <p><span> email : </span> indrat.dev@gmail.com</p>
-              <p><span> place : </span> Indonesia</p>
-            </div>
-          </div>
-
-          <div class="resumebtn">
-            <a href="#" class="btn"
-              ><span>Resume</span>
-              <i class="fas fa-chevron-right"></i>
-            </a>
+        </div>
+      </div> -->
+      <div class="container">
+        <div class="content">
+          <div class="image-box">
+            <img 
+              draggable="false" 
+              src="./assets/images/projects/mytelkomsel-banner.png"
+              alt="" 
+            />
           </div>
         </div>
       </div>
