--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -152,27 +152,9 @@
         <i class="fas fa-user-alt"></i> Slicing UI | <span>MyTelkomsel</span>
       </h2>
 
-      <!-- <div class="row"> -->
-        <!-- <div class="image">
-          <img
-            draggable="false"
-            class="tilt"
-            src="./assets/images/projects/mytelkomsel-banner.png"
-            alt=""
-          />
-        </div>
-        <div class="content">
-          <h3>MyTelkomsel</h3>
-          <span class="tag">Slicing UI</span>
-          <p>
-            MyTelkomsel is a mobile application published by Telkomsel.
-            MyTelkomsel Slicing UI uses the Flutter Framework which is 
-            a display that fits the application. In slicing UI, 
-            it is divided into sections for each module.
-          </p>
-        </div>
-      </div> -->
+      
       <div class="container">
+        <!-- banner -->
         <div class="content">
           <div class="image-box">
             <img 
@@ -182,6 +164,29 @@
             />
           </div>
         </div>
+        <!-- banner end -->
+        <!-- detail banner -->
+        <div class="row"> 
+          <div class="image">
+            <img
+              draggable="false"
+              class="tilt"
+              src="./assets/images/projects/mytelkomsel-banner.png"
+              alt=""
+            />
+          </div>
+          <div class="content">
+            <h3>MyTelkomsel</h3>
+            <span class="tag">Slicing UI</span>
+            <p>
+              MyTelkomsel is a mobile application published by Telkomsel.
+              MyTelkomsel Slicing UI uses the Flutter Framework which is 
+              a display that fits the application. In slicing UI, 
+              it is divided into sections for each module.
+            </p>
+          </div>
+        </div>
+        <!-- detail banner end-->
       </div>
 
     </section>
