--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -191,6 +191,32 @@
           </div>
         </div>
         <!-- detail banner end-->
+        <!-- detail banner -->
+        <div class="box-container">
+          <div class="box">
+            <div class="row"> 
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-banner.png"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h3>MyTelkomsel</h3>
+                <span class="tag">Slicing UI</span>
+                <p>
+                  MyTelkomsel is a mobile application published by Telkomsel.
+                  MyTelkomsel Slicing UI uses the Flutter Framework which is 
+                  a display that fits the application. In slicing UI, 
+                  it is divided into sections for each module.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- detail banner end-->
       </div>
 
     </section>
