--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -170,7 +170,7 @@
     <!-- content section end -->
 
     <!-- detail section  -->
-    <section class="education" id="education">
+    <section class="detailcontent" id="detailcontent">
       <!-- detail banner -->
       <div class="box-container">
         <div class="box">
