--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -172,8 +172,8 @@
     <!-- detail section  -->
     <section class="detailcontent" id="detailcontent">
       <!-- detail banner -->
-      <div class="box-container">
-        <div class="box">
+      <!-- <div class="box-container">
+        <div class="box"> -->
           <div class="row"> 
             <div class="image">
               <img
@@ -194,12 +194,12 @@
               </p>
             </div>
           </div>
-        </div>
-      </div>
+        <!-- </div> -->
+      <!-- </div> -->
       <!-- detail banner end-->
       <!-- detail banner -->
-      <div class="box-container">
-        <div class="box">
+      <!-- <div class="box-container">
+        <div class="box"> -->
           <div class="row">               
             <div class="content">
               <h3>MyTelkomsel</h3>
@@ -220,8 +220,8 @@
               />
             </div>
           </div>
-        </div>
-      </div>
+        <!-- </div>
+      </div> -->
       <!-- detail banner end-->
     </section>
     <!-- detail section end -->
